--- a/invoices/webapp/css/style.css
+++ b/invoices/webapp/css/style.css
@@ -1,1 +1,5 @@
-.boldElements{font-weight: bold;}
+.boldElements {font-weight: bold;}
+
+.productRating {padding: 0.75rem;}
+
+.productRating .sapMRI {vertical-align: initial;}
