--- a/invoices/webapp/view/InvoicesList.view.xml
+++ b/invoices/webapp/view/InvoicesList.view.xml
@@ -33,6 +33,8 @@
                             }"
                             numberUnit="{currency>/usd}" 
                             numberState="{= ${northwind>ExtendedPrice} > 50 ? 'Success' : 'Error'}"
+                            type="Navigation"
+                            press="onNavToDetails"
                             >
                             <firstStatus>
                                 <ObjectStatus text="{northwind>ShipperName}"/>
