--- a/employees/webapp/view/DetailsEmployee.view.xml
+++ b/employees/webapp/view/DetailsEmployee.view.xml
@@ -9,9 +9,38 @@
                 alignItems="Center" 
                 justifyContent="Center">
             <items>
-                <Text   text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"
+                <Text text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"
                         class="boldText"/>
             </items>
         </FlexBox>
+        <FlexBox height="4.1rem" 
+                alignItems="Start" 
+                justifyContent="SpaceBetween">
+            <items>
+                <VBox>
+                    <Text text="{i18n>employeeId}" class="boldText sapUiTinyMarginEnd"/>    
+                    <Text text="{jsonEmployees>EmployeeID}"/>                
+                </VBox>
+                <VBox>
+                    <Text text="{i18n>titleEmployee}" class="boldText sapUiTinyMarginEnd"/>    
+                    <Text text="{jsonEmployees>Title}"/>                
+                </VBox>
+            </items>
+        </FlexBox>  
+        <FlexBox alignItems="Start"
+                 justifyContent="SpaceBetween">
+            <HBox>
+                <Text text="{i18n>countryCode}:" class="boldText sapUiTinyMarginEnd"/>    
+                <Text text="{jsonEmployees>Country}" width="100%"/>             
+            </HBox>
+            <HBox>
+                <Text text="{i18n>city}:" class="boldText sapUiTinyMarginEnd"/>    
+                <Text text="{jsonEmployees>City}" width="100%"/>             
+            </HBox>
+            <HBox>
+                <Text text="{i18n>postalCode}:" class="boldText sapUiTinyMarginEnd"/>    
+                <Text text="{jsonEmployees>PostalCode}" width="100%"/>             
+            </HBox>                        
+        </FlexBox>      
     </Page>
 </mvc:View>
