--- a/employees/webapp/view/DetailsEmployee.view.xml
+++ b/employees/webapp/view/DetailsEmployee.view.xml
@@ -18,28 +18,28 @@
                 justifyContent="SpaceBetween">
             <items>
                 <VBox>
-                    <Text text="{i18n>employeeId}" class="boldText sapUiTinyMarginEnd"/>    
-                    <Text text="{jsonEmployees>EmployeeID}"/>                
+                    <Text text="{i18n>employeeId}:" class="boldText sapUiSmallMarginBegin"/>    
+                    <Text text="{jsonEmployees>EmployeeID}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>                
                 </VBox>
                 <VBox>
-                    <Text text="{i18n>titleEmployee}" class="boldText sapUiTinyMarginEnd"/>    
-                    <Text text="{jsonEmployees>Title}"/>                
+                    <Text text="{i18n>titleEmployee}:" class="boldText sapUiSmallMarginEnd"/>    
+                    <Text text="{jsonEmployees>Title}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>                
                 </VBox>
             </items>
         </FlexBox>  
         <FlexBox alignItems="Start"
                  justifyContent="SpaceBetween">
             <HBox>
-                <Text text="{i18n>countryCode}:" class="boldText sapUiTinyMarginEnd"/>    
-                <Text text="{jsonEmployees>Country}" width="100%"/>             
+                <Text text="{i18n>countryCode}:" class="boldText sapUiSmallMarginBegin"/>    
+                <Text text="{jsonEmployees>Country}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
             </HBox>
             <HBox>
                 <Text text="{i18n>city}:" class="boldText sapUiTinyMarginEnd"/>    
-                <Text text="{jsonEmployees>City}" width="100%"/>             
+                <Text text="{jsonEmployees>City}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
             </HBox>
             <HBox>
                 <Text text="{i18n>postalCode}:" class="boldText sapUiTinyMarginEnd"/>    
-                <Text text="{jsonEmployees>PostalCode}" width="100%"/>             
+                <Text text="{jsonEmployees>PostalCode}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
             </HBox>                        
         </FlexBox>      
     </Page>
