--- a/employees/webapp/view/DetailsEmployee.view.xml
+++ b/employees/webapp/view/DetailsEmployee.view.xml
@@ -4,43 +4,59 @@
         xmlns:mvc="sap.ui.core.mvc">
     
     <Page title="{i18n>employeeDetails}">
+        <Panel>            
+            <FlexBox height="4.1rem" 
+                    alignItems="Center" 
+                    justifyContent="Center">
+                <items>
+                    <Text text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"
+                            class="boldText"/>
+                </items>
+            </FlexBox>
+            <FlexBox height="4.1rem" 
+                    alignItems="Start" 
+                    justifyContent="SpaceBetween">
+                <items>
+                    <VBox>
+                        <Text text="{i18n>employeeId}:" class="boldText sapUiSmallMarginBegin"/>    
+                        <Text text="{jsonEmployees>EmployeeID}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>                
+                    </VBox>
+                    <VBox>
+                        <Text text="{i18n>titleEmployee}:" class="boldText sapUiSmallMarginEnd"/>    
+                        <Text text="{jsonEmployees>Title}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>                
+                    </VBox>
+                </items>
+            </FlexBox>  
+            <FlexBox alignItems="Start"
+                    justifyContent="SpaceBetween">
+                <HBox>
+                    <Text text="{i18n>countryCode}:" class="boldText sapUiSmallMarginBegin"/>    
+                    <Text text="{jsonEmployees>Country}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
+                </HBox>
+                <HBox>
+                    <Text text="{i18n>city}:" class="boldText sapUiTinyMarginEnd"/>    
+                    <Text text="{jsonEmployees>City}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
+                </HBox>
+                <HBox>
+                    <Text text="{i18n>postalCode}:" class="boldText sapUiTinyMarginEnd"/>    
+                    <Text text="{jsonEmployees>PostalCode}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
+                </HBox>                        
+            </FlexBox>   
+        </Panel>    
+        <Panel class="sapUiSizeCompact" backgroundDesign="Transparent">
+            <headerToolbar>
+                <Toolbar>
+                        <Title text="{i18n>incidence} {= ${jsonEmployees>Country} !== 'US' ? ${i18n>europe} : ${i18n>US}}"/>
+                        <ToolbarSpacer />
+                        <Button text="{i18n>createIncidence}" 
+                                press="onCreateIncidence"/>
 
-        <FlexBox height="4.1rem" 
-                alignItems="Center" 
-                justifyContent="Center">
-            <items>
-                <Text text="{jsonEmployees>LastName}, {jsonEmployees>FirstName}"
-                        class="boldText"/>
-            </items>
-        </FlexBox>
-        <FlexBox height="4.1rem" 
-                alignItems="Start" 
-                justifyContent="SpaceBetween">
-            <items>
-                <VBox>
-                    <Text text="{i18n>employeeId}:" class="boldText sapUiSmallMarginBegin"/>    
-                    <Text text="{jsonEmployees>EmployeeID}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>                
-                </VBox>
-                <VBox>
-                    <Text text="{i18n>titleEmployee}:" class="boldText sapUiSmallMarginEnd"/>    
-                    <Text text="{jsonEmployees>Title}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd"/>                
-                </VBox>
-            </items>
-        </FlexBox>  
-        <FlexBox alignItems="Start"
-                 justifyContent="SpaceBetween">
-            <HBox>
-                <Text text="{i18n>countryCode}:" class="boldText sapUiSmallMarginBegin"/>    
-                <Text text="{jsonEmployees>Country}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
-            </HBox>
-            <HBox>
-                <Text text="{i18n>city}:" class="boldText sapUiTinyMarginEnd"/>    
-                <Text text="{jsonEmployees>City}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
-            </HBox>
-            <HBox>
-                <Text text="{i18n>postalCode}:" class="boldText sapUiTinyMarginEnd"/>    
-                <Text text="{jsonEmployees>PostalCode}" class="sapUiSmallMarginBegin sapUiSmallMarginEnd" width="100%"/>             
-            </HBox>                        
-        </FlexBox>      
+                </Toolbar>
+            </headerToolbar>
+        </Panel>        
+        <Panel  id="tableIncidence" 
+                class="sapUiNoContentPadding" 
+                backgroundDesign="Transparent"/>
     </Page>
+
 </mvc:View>
